# FreeCAD

./: AvoCAD_PLAN.md
cMake/FreeCAD_Helpers/: InitializeFreeCADBuildOptions.cmake  PrintFinalReport.cmake
src/Mod/: CMakeLists.txt
src/Mod/AvoCAD/: CMakeLists.txt  Init.py  InitGui.py  avocad_panel.py
